Introduction of allowances in bundles
Related to https://vikingco.atlassian.net/browse/INT-4985

This allows to give a better visualization of different allowances
e.g. when roaming compared to normal allowance

--- a/definitions/subscriptions/balance.yaml
+++ b/definitions/subscriptions/balance.yaml
@@ -59,22 +59,45 @@ properties:
         valid_until:
           type: string
           format: date-time
-        total:
-          type: number
-          format: float
+        allowances:
           description: >
-             total amount usable in this bundle.  If this value is zero, the bundle can be considered unlimited in its
-             timeframe.
-        remaining:
-          description: >
-            This is the amount left in your bundle.
-          type: number
-          format: float
-        used:
-          description: >
-            This is the amount of your bundle that is used.
-          type: number
-          format: float
+            A list of the allowances for the given bundle. For a given situation you can have different allowance.
+            E.g. you are allowed to use less when roaming or you'll have a fair use allowance when your main bundle has been used
+          type: array
+          items:
+            type: object
+            required:
+              - situation
+              - total
+              - remaining
+              - user
+            properties:
+              situation:
+                type: string
+                enum:
+                  - default
+                  - roaming
+                  - throttled_national
+                description: >
+                  The situation that will have a different allowance.
+                  default: your main allowance of this resource in this bundle
+                  roaming: when roaming you can use a different amount of this resource in this bundle
+                  throttled_national: when your default allowance is depleted this allowance will give more info about your resource
+              total:
+                type: number
+                format: float
+                description: >
+                   total amount usable in this bundle for this allowance.
+              remaining:
+                description: >
+                  This is the amount left in your bundle for this allowance.
+                type: number
+                format: float
+              used:
+                description: >
+                  This is the amount of your bundle that is used of this allowance.
+                type: number
+                format: float
         type:
           type: string
           enum:
